Harden test harness: fix wiring/security, AST scoping, and doc drift
QA/bug-bounty pass over the Spring test harness plugin (fact-checked against
Claude Code plugin docs and tool/source behavior).

Wiring & security:
- .mcp.json: ${workspaceFolder}->${CLAUDE_PROJECT_DIR}; drop dead BUILD_TEST_NETWORK
- .lsp.json: same variable fix
- Enforce secret/vendor Read + WebFetch deny via new scripts/guard-read.py hook
  (plugin settings.json permissions/env are ignored by Claude Code)

MCP servers:
- repo-ast: scope methods/fields to each class body (no cross-class merge / no
  method-body locals as fields); per-file parse_mode "mixed"; guard pass-2 read;
  remove dead import loop
- build-test: clear stale JUnit XML before run (a failed build can no longer
  report "ok"); count MEMORY_ERROR/RUN_ERROR as killed in PITest score
- spec-doc: report SPEC_DOC_UNREADABLE for unsupported files (e.g. .pdf);
  top_k<=0 -> []; word-boundary keyword scoring

Orchestration (align to fallback-policy SSOT):
- retry/iteration caps -> progress-based (no fixed 2x cap; stop on 3x no-progress)
- JDT-LS optional (AST-only degrade); propagate springProfile to generate-tests
- unify HarnessConfig field names (coverage{...excludes}/mutation{...});
  DEFAULT -> DEFAULTS mutators

Docs:
- JavaParser jar recommended-with-degrade, not hard-fail (matches shipped
  .mcp.json which omits REPO_AST_REQUIRE_JAVAPARSER)
- README skill/agent tables completed; pyproject 0.2.0 -> 0.8.0
- remove phantom astNodeMap; fix dependencyGraph shape; correct Maven task
  names and _workspace filename; coverage_gate class->klass
- remove empty javaparser-cli/.../repoast/ dir

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>